Syntaxe/Test/Invalide/Fournis/simple_lex.deca
// Description:
//    tests de programme lexicalement correct.
//    test_lex ne doit pas donner d'erreur.
//
// Resultats:
//    Ligne 13 : Erreur de syntaxe.
//
// Historique:
//    cree le 01/01/2012

idf
_autre_idf
{
}
(
)
// un commentaire.
